--- a/tools/cfgs/avltruck_models/second.yaml
+++ b/tools/cfgs/avltruck_models/second.yaml
@@ -107,7 +107,7 @@ MODEL:
 
 OPTIMIZATION:
     BATCH_SIZE_PER_GPU: 4
-    NUM_EPOCHS: 30
+    NUM_EPOCHS: 60
 
     OPTIMIZER: adam_onecycle
     LR: 0.003
@@ -121,7 +121,7 @@ OPTIMIZATION:
     LR_DECAY: 0.1
     LR_CLIP: 0.0000001
 
-    LR_WARMUP: False
+    LR_WARMUP: True
     WARMUP_EPOCH: 1
 
     GRAD_NORM_CLIP: 10
