adapted logger, added debugging cmdline args, added debugging configs for avl dataset

--- a/tools/cfgs/avltruck_models/second_car.yaml
+++ b/tools/cfgs/avltruck_models/second_car.yaml
@@ -54,26 +54,26 @@ MODEL:
                 'matched_threshold': 0.55,
                 'unmatched_threshold': 0.4
             },
-            {
-                'class_name': 'Human',
-                'anchor_sizes': [[0.91, 0.86, 1.73]],
-                'anchor_rotations': [0, 1.57],
-                'anchor_bottom_heights': [0],
-                'align_center': False,
-                'feature_map_stride': 8,
-                'matched_threshold': 0.5,
-                'unmatched_threshold': 0.35
-            },
-            {
-                'class_name': 'Vehicle_Ridable_Bicycle',
-                'anchor_sizes': [[1.78, 0.84, 1.78]],
-                'anchor_rotations': [0, 1.57],
-                'anchor_bottom_heights': [0],
-                'align_center': False,
-                'feature_map_stride': 8,
-                'matched_threshold': 0.5,
-                'unmatched_threshold': 0.35
-            }
+            #{
+            #    'class_name': 'Human',
+            #    'anchor_sizes': [[0.91, 0.86, 1.73]],
+            #    'anchor_rotations': [0, 1.57],
+            #    'anchor_bottom_heights': [0],
+            #    'align_center': False,
+            #    'feature_map_stride': 8,
+            #    'matched_threshold': 0.5,
+            #    'unmatched_threshold': 0.35
+            #},
+            #{
+            #    'class_name': 'Vehicle_Ridable_Bicycle',
+            #    'anchor_sizes': [[1.78, 0.84, 1.78]],
+            #    'anchor_rotations': [0, 1.57],
+            #    'anchor_bottom_heights': [0],
+            #    'align_center': False,
+            #    'feature_map_stride': 8,
+            #    'matched_threshold': 0.5,
+            #    'unmatched_threshold': 0.35
+            #}
         ]
 
         TARGET_ASSIGNER_CONFIG:
@@ -109,7 +109,7 @@ MODEL:
 
 OPTIMIZATION:
     BATCH_SIZE_PER_GPU: 1
-    NUM_EPOCHS: 60
+    NUM_EPOCHS: 30
 
     OPTIMIZER: adam_onecycle
     LR: 0.003
