--- a/tools/cfgs/dataset_configs/kitti/OD/kitti_dataset.yaml
+++ b/tools/cfgs/dataset_configs/kitti/OD/kitti_dataset.yaml
@@ -39,8 +39,8 @@ DATA_AUGMENTOR:
         - NAME: random_world_flip
           ALONG_AXIS_LIST: ['x']
 
-        - NAME: random_world_rotation
-          WORLD_ROT_ANGLE: [-0.78539816, 0.78539816]
+        # - NAME: random_world_rotation
+        #   WORLD_ROT_ANGLE: [-0.78539816, 0.78539816]
 
         - NAME: random_world_scaling
           WORLD_SCALE_RANGE: [0.95, 1.05]
