fixed training on avltruck dataset

--- a/tools/cfgs/avltruck_models/second.yaml
+++ b/tools/cfgs/avltruck_models/second.yaml
@@ -1,12 +1,13 @@
-#CLASS_NAMES: [  'Vehicle_Drivable_Car', 'Vehicle_Drivable_Van', 
-#                'Human',
-#                'Vehicle_Ridable_Motorcycle', 'Vehicle_Ridable_Bicycle',
-#                'LargeVehicle_Bus', 'LargeVehicle_TruckCab','LargeVehicle_Truck', 'Trailer'
-#            ]
+# CLASS_NAMES: [  'Vehicle_Drivable_Car', 'Vehicle_Drivable_Van', 
+#                 'Human',
+#                 'Vehicle_Ridable_Motorcycle', 'Vehicle_Ridable_Bicycle',
+#                 'LargeVehicle_Bus', 'LargeVehicle_TruckCab','LargeVehicle_Truck', 'Trailer'
+#             ]
 
-#CLASS_NAMES: ['Vehicle_Drivable_Car', 'Human',  'Vehicle_Ridable_Bicycle']
+#anything not in class_names will be treated as background
+CLASS_NAMES: ['Vehicle_Drivable_Car', Vehicle_Drivable_Van, 'Human',  'Vehicle_Ridable_Bicycle', Vehicle_Ridable_Motorcycle]
 
-CLASS_NAMES: ['Vehicle_Drivable_Car']
+#CLASS_NAMES: ['Vehicle_Drivable_Car']
 
 DATA_CONFIG:
     _BASE_CONFIG_: cfgs/dataset_configs/avltruck/OD/avltruck_dataset.yaml
@@ -46,9 +47,19 @@ MODEL:
         ANCHOR_GENERATOR_CONFIG: [
             {
                 'class_name': 'Vehicle_Drivable_Car',
-                'anchor_sizes': [[4.7, 2.1, 1.7]],
+                'anchor_sizes': [[4.0, 1.9, 1.5]],
                 'anchor_rotations': [0, 1.57],
-                'anchor_bottom_heights': [0],
+                'anchor_bottom_heights': [-2.7],
+                'align_center': False,
+                'feature_map_stride': 8,
+                'matched_threshold': 0.55,
+                'unmatched_threshold': 0.4
+            },
+            {
+                'class_name': 'Vehicle_Drivable_Van',
+                'anchor_sizes': [[4.7, 2.1, 2]],
+                'anchor_rotations': [0, 1.57],
+                'anchor_bottom_heights': [-2.3],
                 'align_center': False,
                 'feature_map_stride': 8,
                 'matched_threshold': 0.55,
@@ -56,9 +67,9 @@ MODEL:
             },
             {
                 'class_name': 'Human',
-                'anchor_sizes': [[0.91, 0.86, 1.73]],
+                'anchor_sizes': [[0.76, 0.72, 1.65]],
                 'anchor_rotations': [0, 1.57],
-                'anchor_bottom_heights': [0],
+                'anchor_bottom_heights': [-2.5],
                 'align_center': False,
                 'feature_map_stride': 8,
                 'matched_threshold': 0.5,
@@ -66,9 +77,19 @@ MODEL:
             },
             {
                 'class_name': 'Vehicle_Ridable_Bicycle',
-                'anchor_sizes': [[1.78, 0.84, 1.78]],
+                'anchor_sizes': [[1.80, 0.61, 1.10]],
                 'anchor_rotations': [0, 1.57],
-                'anchor_bottom_heights': [0],
+                'anchor_bottom_heights': [-2.81],
+                'align_center': False,
+                'feature_map_stride': 8,
+                'matched_threshold': 0.5,
+                'unmatched_threshold': 0.35
+            },
+            {
+                'class_name': 'Vehicle_Ridable_Motorcycle',
+                'anchor_sizes': [[2.03, 0.61, 1.19]],
+                'anchor_rotations': [0, 1.57],
+                'anchor_bottom_heights': [-2.80],
                 'align_center': False,
                 'feature_map_stride': 8,
                 'matched_threshold': 0.5,
@@ -102,14 +123,13 @@ MODEL:
         NMS_CONFIG:
             MULTI_CLASSES_NMS: False
             NMS_TYPE: nms_gpu
-            NMS_THRESH: 0.7
+            NMS_THRESH: 0.01
             NMS_PRE_MAXSIZE: 4096
             NMS_POST_MAXSIZE: 500
 
 
 OPTIMIZATION:
-    BATCH_SIZE_PER_GPU: 1
-    NUM_EPOCHS: 60
+    BATCH_SIZE_PER_GPU: 4
 
     OPTIMIZER: adam_onecycle
     LR: 0.003
@@ -123,7 +143,7 @@ OPTIMIZATION:
     LR_DECAY: 0.1
     LR_CLIP: 0.0000001
 
-    LR_WARMUP: True
+    LR_WARMUP: False
     WARMUP_EPOCH: 1
 
     GRAD_NORM_CLIP: 10
