--- a/tools/cfgs/dataset_configs/kitti/OD/kitti_dataset.yaml
+++ b/tools/cfgs/dataset_configs/kitti/OD/kitti_dataset.yaml
@@ -16,10 +16,11 @@ INFO_PATH: {
 
 
 GET_ITEM_LIST: ["points"]
-FOV_POINTS_ONLY: True
+FOV_POINTS_ONLY: False
 
 DATA_AUGMENTOR:
     DISABLE_AUG_LIST: ['placeholder']
+    #DISABLE_AUG_LIST: ['random_world_flip', 'random_world_rotation', 'random_world_scaling']
     AUG_CONFIG_LIST:
         - NAME: gt_sampling
           USE_ROAD_PLANE: False
@@ -31,6 +32,7 @@ DATA_AUGMENTOR:
           }
 
           SAMPLE_GROUPS: ['Car:20','Pedestrian:15', 'Cyclist:15']
+          
           NUM_POINT_FEATURES: 4
           DATABASE_WITH_FAKELIDAR: False
           REMOVE_EXTRA_WIDTH: [0.0, 0.0, 0.0]
@@ -39,8 +41,8 @@ DATA_AUGMENTOR:
         - NAME: random_world_flip
           ALONG_AXIS_LIST: ['x']
 
-        # - NAME: random_world_rotation
-        #   WORLD_ROT_ANGLE: [-0.78539816, 0.78539816]
+        - NAME: random_world_rotation
+          WORLD_ROT_ANGLE: [-0.78539816, 0.78539816]
 
         - NAME: random_world_scaling
           WORLD_SCALE_RANGE: [0.95, 1.05]
