--- a/tools/cfgs/dataset_configs/waymo/OD/waymo_dataset.yaml
+++ b/tools/cfgs/dataset_configs/waymo/OD/waymo_dataset.yaml
@@ -1,5 +1,5 @@
 DATASET: 'WaymoDataset'
-DATA_PATH: '../data/waymo'
+DATA_PATH: '/data/waymo'
 # OSS_PATH: 's3://${PATH_TO_DATASET}/waymo_0.5.0'
 PROCESSED_DATA_TAG: 'waymo_processed_data_v0_5_0'
 
@@ -27,11 +27,11 @@ DATA_AUGMENTOR:
         - NAME: gt_sampling
           USE_ROAD_PLANE: False
           DB_INFO_PATH:
-              - waymo_processed_data_v0_5_0_waymo_dbinfos_train_sampled_1.pkl
+              - kitti_format/waymo_dbinfos_train.pkl
 
           USE_SHARED_MEMORY: False  # set it to True to speed up (it costs about 15GB shared memory)
           DB_DATA_PATH:
-              - waymo_processed_data_v0_5_0_gt_database_train_sampled_1_global.npy
+              - kitti_format/waymo_gt_database
 
           PREPARE: {
              filter_by_min_points: ['Vehicle:5', 'Pedestrian:5', 'Cyclist:5'],
