refactor datasets to ../data/ folder with symlinks added bike label merge for avl datasets cleanup avl dataloaders avltruck dataloader, implement get_labels and create_infos zod added disregard truncated samples in gt database

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,13 @@ tools/update_reminder.txt
 
 tools/train_random_source_target.py
 */logs/*
+data/avlrooftop/gt_database
+data/avlrooftop/sequences
+
+data/avltruck/gt_database
+data/avltruck/sequences
+
+data/zod/gt_database_full
+data/zod/gt_database_mini
+data/zod/gt_database_small
+data/zod/single_frames
