--- a/tools/cfgs/dataset_configs/zod/OD/zod_dataset.yaml
+++ b/tools/cfgs/dataset_configs/zod/OD/zod_dataset.yaml
@@ -4,9 +4,9 @@
 #  "VulnerableVehicle_Bicycle", "VulnerableVehicle_Motorcycle",
 #  "Pedestrian"]
 DATASET: "ZODDataset"
-DATA_PATH: "/data/zod"
+DATA_PATH: "../data/zod"
 
-VERSION: "full" # 'mini', 'small' or 'full'    #dont forget to change info paths below!
+VERSION: "small" # 'mini', 'small' or 'full'    #dont forget to change info paths below!
 
 #maps the classes form the dataset info files to classes from the detector
 #the right-hand names need to match the class names in the detector config
@@ -35,6 +35,12 @@ POINT_CLOUD_RANGE: [-75.2, -75.2, -2, 123.2, 75.2, 4] # ZOD
 
 FOV_POINTS_ONLY: True
 
+#dont calculate loss for boxes that are truncated
+DISREGARD_TRUNCATED: False
+
+#dont store truncated boxes in gt database
+REMOVE_TRUNCATED_GTSAMPLING: True
+
 #position of the groundplane relative to data origin (usually lidar sensor)
 #used to shift data to the ground plane when generating infos and at training time (get_lidar)
 LIDAR_Z_SHIFT: -2.08702246
@@ -52,7 +58,7 @@ POINT_FEATURE_ENCODING:
     src_feature_list: ["x", "y", "z", "intensity"],
   }
 
-INFO_PATH: { "train": zod_infos_train_full.pkl, "test": zod_infos_val_full.pkl }
+INFO_PATH: { "train": zod_infos_train_small.pkl, "test": zod_infos_val_small.pkl }
 
 DATA_AUGMENTOR:
   DISABLE_AUG_LIST: ["placeholder"]
@@ -61,7 +67,7 @@ DATA_AUGMENTOR:
     - NAME: gt_sampling
       USE_ROAD_PLANE: False
       DB_INFO_PATH:
-        - zod_dbinfos_train_full.pkl
+        - zod_dbinfos_train_small.pkl
       PREPARE:
         {
           filter_by_min_points:
