--- a/.gitignore
+++ b/.gitignore
@@ -44,4 +44,6 @@ data/zod/trainval-frames-mini.json
 data/zod/trainval-frames-full.json
 
 data/*
-tools/train_okleanos.sh
+tools/test_crossdataset_okeanos.sh
+tools/train_okeanos.sh
+tools/test_okeanos.sh
